# GBAEmu

./: Cargo.toml  Makefile  README.md
c_tests/: inflate.c  script.ld  startup.s  test.c  thumb_startup.s
src/: main.rs
src/arm/: common.rs  cpu.rs  mem.rs  mod.rs
src/audio/: apu.rs  mod.rs  pulse_wave.rs
src/audio/channels/: mod.rs  pulse_channel1.rs  pulse_channel2.rs  wave_channel.rs
src/audio/waves/: mod.rs  sample_wave.rs
src/graphics/: gpu.rs  window.rs
tests/: test_alu.s  test_arm.c  test_arm.s  test_branch.s  test_ld.s  test_ldm.s  test_ldrh.s  test_msr.s  test_mul.s  test_swi.s  test_swp.s  test_und.s
thumb_tests/: test_alu.s  test_hi.s  test_ld.s  test_swi.s
