[package]
name = "gbaemu"
version = "0.1.0"
authors = ["Leo Orshansky <leoorshansky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rodio = "0.13.1"
image = "0.23.14"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[profile.release]
debug = true